# WhileStudent

./: README.md  main.cpp
3.Year/Data Security/: AffineCipherTR.py
3.Year/DataCommunication/TcpIp/: BasicTcpIp.c  CMakeLists.txt  README.md
3.Year/DigitalSignalProcessing/: UnitStepFunction.py  main.py
BilgisayarMühendisligineGiris/Week 11/: PaymentOfWorkers.c
BilgisayarMühendisligineGiris/Week 5/: ödev 2.c
BilgisayarMühendisligineGiris/Week 7/: tek_çift_sayilari.c
C & C++/: README.md  main.cpp
C & C++/Kodumun Yeri/: ExNumber.cpp  HalfPyramid
C#/HomeWork/: ImageViewer
DataCommunication/: README.md
DataCommunication/Encoding/: README.md
DataCommunication/TcpIp/: README.md
DataStructers/: main.cpp  main.h
DataStructers/Stack/: main.h
DataStructers/Tree/: main.cpp
DataStructures/Queue/: main.cpp
DataStructures/Stack/: main.h
DataStructures/Tree/: main.h
ForCV/TicTacToe/: main.cpp
Java/OOP/: Gpa.java  Main.java  TheBoard.java
Kodumun Yeri/: ExNumber.cpp  Gülücük.c  Kel_Kartallar.c  not_hesap.c  okulda.yaptigim.c  proje.docx
Week 2/: ödev-1.c  ödev-2.c  ödev-3.c
Week 3/: ödev-1.c  ödev-2.c
Week 4/: ödev-1.c  ödev-2.c
Week-10/: TekCift.c
Week-11/: PaymentOfWorkers.c
Week-9/: birbirine_zit_arabalar.c
dev/: Ödev
phoneSimulator/: Main.java  People.java  bestFriend.java  foe.java  friend.java
week-10/: TekCift.c
Ödev/Serbest calisma/: Gülücük.c  Kel_Kartallar.c  okulda.yaptigim.c
Ödev/Week 5/: ödev 2.c
Ödev/week 2/: ödev-1.c  ödev-2.c  ödev-3.c
Ödev/week 3/: ödev-1.c  ödev-2.c  ödev-3.c
Ödev/week 4/: ödev-1.c  (+1 more)
(+30 files in other folders)
